Fix for missing background colours

--- a/app/assets/stylesheets/licence-finder.scss
+++ b/app/assets/stylesheets/licence-finder.scss
@@ -153,7 +153,7 @@ a.add {
 #sector-navigation ul li span,
 .search-picker ul li span,
 .picked-items ul li span {
-  float: left;
+  line-height: 1.8;
   width: 73%;
 }
 
